# async_RESTful_api

./: Cargo.toml  README.md
migrations/: 20241228223346_create_boards.sql  20241228223354_create_cards.sql
src/: db.rs  logger.rs  main.rs  models.rs  routes.rs
