[package]
name = "async_RESTful_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = {version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
fern = "0.7.1"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "chrono", "postgres"] }
tokio = { version = "1.42.0", features = ["full"] }
